[gd_scene load_steps=10 format=3 uid="uid://dfxfeqlfoquo1"]

[ext_resource type="Script" path="res://question/question.gd" id="1_ylp3s"]
[ext_resource type="Material" uid="uid://dxnakspis58w" path="res://question/flip_material.tres" id="2_6t7d2"]
[ext_resource type="Texture2D" uid="uid://7lmcbri8hqhl" path="res://sprites/canvas-front.png" id="2_rl8no"]
[ext_resource type="Script" path="res://question/page_flip.gd" id="3_6cptl"]
[ext_resource type="Theme" uid="uid://p8gcgrp1qpr7" path="res://question/question_theme.tres" id="4_aoen0"]
[ext_resource type="Texture2D" uid="uid://b42bgr22wraa0" path="res://sprites/canvas-top.png" id="5_qmnny"]
[ext_resource type="Texture2D" uid="uid://d1gnahmj71onb" path="res://sprites/canvas-ball.png" id="6_a4sjh"]

[sub_resource type="ViewportTexture" id="ViewportTexture_f345l"]
viewport_path = NodePath("PageFlipViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_1iile"]
viewport_path = NodePath("ContentViewport")

[node name="Question" type="Node2D"]
script = ExtResource("1_ylp3s")

[node name="FinalOutput" type="TextureRect" parent="."]
material = ExtResource("2_6t7d2")
offset_left = -300.0
offset_top = -300.0
offset_right = 1227.0
offset_bottom = 619.0
texture = SubResource("ViewportTexture_f345l")
flip_h = true
script = ExtResource("3_6cptl")

[node name="PageFlipViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1524, 919)

[node name="ViewportCanvasFront" type="TextureRect" parent="PageFlipViewport"]
offset_right = 1229.0
offset_bottom = 613.0
texture = SubResource("ViewportTexture_1iile")
flip_h = true

[node name="ContentViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1524, 919)

[node name="CanvasFront" type="TextureRect" parent="ContentViewport"]
offset_left = 300.0
offset_top = 300.0
offset_right = 1529.0
offset_bottom = 913.0
size_flags_vertical = 0
theme = ExtResource("4_aoen0")
texture = ExtResource("2_rl8no")

[node name="MarginContainer" type="MarginContainer" parent="ContentViewport/CanvasFront"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 95
theme_override_constants/margin_bottom = 95

[node name="VBoxContainer" type="VBoxContainer" parent="ContentViewport/CanvasFront/MarginContainer"]
layout_mode = 2

[node name="Subject" type="Label" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Scrum"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="RichTextLabel" type="RichTextLabel" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Qual é a função do Scrum Master em um time Scrum?"

[node name="GridContainer" type="GridContainer" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Button" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "A) Letra 1"
flat = true
alignment = 0

[node name="Label2" type="Button" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "B) Número B"
flat = true
alignment = 0

[node name="Label3" type="Button" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "C) Sim"
flat = true
alignment = 0

[node name="Label4" type="Button" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "D) Óbvio"
flat = true
alignment = 0

[node name="Spacer" type="Control" parent="ContentViewport/CanvasFront/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="CanvasTop" type="TextureRect" parent="ContentViewport"]
offset_left = 300.0
offset_top = 300.0
offset_right = 1518.0
offset_bottom = 399.0
texture = ExtResource("5_qmnny")

[node name="DifficultyBall" type="Sprite2D" parent="ContentViewport"]
self_modulate = Color(1, 0.337255, 1, 1)
position = Vector2(1465, 349)
texture = ExtResource("6_a4sjh")
